# pathfinding-comparison

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
docs/: implementation.md  specifications.md  test_report.md  user_manual.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: app.py  astar.py  jps.py  map_generator.py  map_handler.py  pathfinder.py  ui.py
tests/: pathfinder_benchmark.py  test_astar.py  test_jps.py  test_map_generator.py  test_map_handler.py  test_pathfinder.py  test_ui.py
