[project]
name = "pathfinding-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)"
]

[tool.pylint.format]
indent-string = "\t"
